# openauth-totp

./: LICENSE  MANIFEST.in  README.md  launch.bat  launch.sh  pyproject.toml
.github/workflows/: build.yml  increment_version_workflow.yml  pypi_release.yml
src/openauth/: __init__.py  __main__.py  openauth.html
