[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openauth-totp"
version = "0.1.0"
description = "Minimal TOTP 2FA code generator with clipboard copy and global hotkey support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Richard Hakim" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Repository = "https://github.com/rhakim/openauth-totp"

[project.scripts]
openauth = "openauth.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openauth = ["openauth.html"]
